some alignment fixes in chrome, fixed margin on body issue

--- a/sass/components/utils.scss
+++ b/sass/components/utils.scss
@@ -16,7 +16,7 @@
 }
 
 .highlight {
-	background-color: $shade-150;
+	background-color: $shade-100;
 	color: $syntax;
 }
 
