--- a/sass/default.scss
+++ b/sass/default.scss
@@ -12,6 +12,7 @@
 }
 
 body {
+	margin: 0;
 	font-family: 'Raleway';
 	background: #eee;
 	background: radial-gradient(#ddd, #ccc);
